--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
         <item>Received</item>
     </string-array>
     <string-array name="payment_mode_array">
+        <item> </item>
         <item>GPay</item>
         <item>Cash</item>
     </string-array>
